frontend/portfolio/styles/globals.css
@import "../node_modules/bulma/css/bulma.min.css";

:root {
	--primary: rgb(250, 250, 250);
	--secondary: rgb(24, 24, 24);
	--accent: rgb(255, 255, 255);
	--linkcolor: #485fc7;
	--linkhover: rgb(240, 240, 240);
	--navbar: rgb(255, 255, 255);

	background-color: var(--primary);
	color: var(--secondary);
}

[data-theme="dark"] {
	--primary: rgb(43, 43, 43);
	--secondary: rgb(243, 243, 243);
	--accent: rgb(26, 26, 26);
	--linkcolor: #ccd5ff;
	--linkhover: rgb(110, 110, 110);
	--navbar: rgb(0, 0, 0);
}

html {
	background-color: var(--primary);
	color: var(--secondary);
}

body {
	background-color: var(--primary);
	color: var(--secondary);
}

a.navbar-item {
	background-color: var(--navbar);
	color: var(--secondary);
}

a.navbar-item:hover {
	background-color: var(--primary);
	color: var(--secondary);
}

.navbar {
	background-color: var(--navbar);
	color: var(--secondary);
}

.navbar-menu {
	background-color: var(--navbar);
	color: var(--secondary);
}

.navbar-item {
	background-color: var(--navbar);
	color: var(--secondary);
}

div.navbar-start {
	background-color: var(--navbar);
	color: var(--secondary);
}

div.navbar-brand {
	background-color: var(--navbar);
	color: var(--secondary);
}

div.navbar-end {
	background-color: var(--navbar);
	color: var(--secondary);
}

div.card {
	background: var(--accent);
}

footer.card-footer {
	background: var(--accent);
}

div {
	background-color: var(--primary);
	color: var(--secondary);
}

div.has-text-right {
	background-color: var(--accent);
}

#profile {
	border-radius: 50%;
}

.title {
	color: var(--secondary);
}

.subtitle {
	color: var(--secondary);
	font-weight: bold;
}

a {
	color: var(--linkcolor);
	background-color: var(--primary);
}

a:hover {
	color: var(--linkcolor);
	background-color: var(--linkhover);
}

.socialContainer {
	margin-bottom: 0.5rem;
}

.alternateLocation {
	display: none;
}

p.card-header-title {
	color: var(--secondary);
}

time {
	color: var(--secondary);
}

i.fas {
	color: var(--secondary);
}

p {
	overflow: hidden;
}

.hidden {
	display: none;
}

#latestBlogTitle {
	margin-bottom: 0px;
}

.accented {
	background-color: var(--accent);
}

div.tags {
	background-color: var(--accent);
}

.postImage {
	border-radius: 5px;
}

.tweet:hover {
	cursor: pointer;
}

input.input {
	background-color: var(--primary);
	color: var(--secondary);
}

label.checkbox:hover {
	color: var(--secondary);
}

input.input::placeholder {
	color: var(--secondary);
}

/* Narrow desktop but not yet mobile */
@media (min-width: 769px) and (max-width: 1030px) {
	.tweetAuthor {
		display: none;
	}
}

/* Incredibly narrow */
@media (max-width: 310px) {
	.tweetAuthor {
		display: none;
	}
}

/* Mobile only */
@media (max-width: 768px) {
	.desktop {
		display: none;
	}
}

/* Desktop only */
@media (min-width: 769px) {
	.mobile {
		display: none;
	}
}

